# hermes-ai-os

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: container-gate.yml  publish-container.yml  quality-gate.yml
apps/backend/app/: main.py
docs/: 00_PROJECT_MASTER.md  01_PROJECT_STATE.yaml  02_BACKLOG.md  03_CHANGELOG.md  HANDOFF_2026-07-12.md  HANDOFF_2026-07-13-SPRINT-04.md  HANDOFF_2026-07-13-SPRINT-05.md  HANDOFF_2026-07-13-SPRINT-06.md  HANDOFF_2026-07-13.md  HANDOFF_2026-07-17-SPRINT-07.md  HANDOFF_2026-07-18-SPRINT-08.md  HANDOFF_2026-07-19-SPRINT-09.md  HANDOFF_2026-07-20-SPRINT-10.md  HANDOFF_2026-07-23-SPRINT-11.md  PROJECT_SNAPSHOT.md
docs/adr/: ADR-0001-pyproject-como-fonte-de-dependencias.md  ADR-0002-pacote-central-de-observabilidade.md  ADR-0003-middleware-asgi-e-contextvars.md  ADR-0004-documentacao-como-sistema-de-continuidade.md  ADR-0005-snapshot-como-projecao-da-arvore-git.md  ADR-0006-uv-lock-como-lock-oficial-de-dependencias.md  ADR-0007-github-actions-como-quality-gate.md  ADR-0008-reproducible-container-baseline.md  ADR-0009-container-artifact-publication-policy.md  README.md
docs/incidents/: INC-0001-ghcr-public-package-bootstrap.md
docs/research/: 2026-07-12-stack-tecnologica.md
tests/: test_api.py  test_container_baseline.py  test_container_gate_workflow.py  test_container_publication_workflow.py  test_env_example.py  test_middleware.py  test_observability.py  test_project_snapshot.py  test_project_state.py  test_quality_gate_workflow.py
tools/: project_snapshot.py
(+10 files in other folders)
